(fix) [SD-3691] Layout issue in tasks view section on the right pane

--- a/client/app/scripts/superdesk-dashboard/workspace-tasks/styles/tasks.less
+++ b/client/app/scripts/superdesk-dashboard/workspace-tasks/styles/tasks.less
@@ -205,7 +205,7 @@ TASK PAGE
 	.preview-pane {
 
 		.action-menu {
-			width: 84px !important;
+			width: 94px !important;
 			.change {
 				border: 0;
 				background: 0;
